updated styles -- preventing search bar div text from wrapping

--- a/client/src/stylesheets/App.css
+++ b/client/src/stylesheets/App.css
@@ -366,6 +366,7 @@ body, #root, html, .App {
   max-width: 140px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 #navbar #search_bar #search_input {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
