--- a/client/src/stylesheets/_navBar.scss
+++ b/client/src/stylesheets/_navBar.scss
@@ -57,6 +57,7 @@
             max-width: 140px;
             overflow: hidden;
             text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         #search_input {
